# EpicEvent

./: .env  .gitignore  README.md  cli.py  db_config.py  init_db.py  main.py  pyproject.toml  validator.py
controllers/: client_controller.py  collaborator_controller.py  contract_controller.py  event_controller.py
models/: client.py  collaborator.py  contract.py  event.py
tests/: conftest.py  test_client_controller.py  test_collaborator_controller.py  test_contract_controller.py  test_event_controller.py
tests/unit/: test_collaborator_controller.py  test_util.py
utils/: __init__.py  cli.py  permissions.py  util.py  utils.py
views/: view.py
